# gpu-unit-economics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: historical_gpu_cpi_method.md  historical_gpu_excluded_sources.csv  historical_gpu_gaps.csv  historical_gpu_prices.csv  historical_gpu_rejected_rows.csv  historical_gpu_schema.csv  historical_gpu_source_quality.md  historical_gpu_sources.csv
data/drafts/: consumer_amd_2018_fix_prices.csv  consumer_amd_2018_fix_sources.csv  consumer_crypto_2018_prices.csv  current_ai_skus_prices.csv  (+7 more)
deploy/: gpu-econ-collect.service  gpu-econ-collect.timer  gpu-econ-deliver-alerts.service  gpu-econ-deliver-alerts.timer  gpu-econ.env.example
tests/: test_alerts.py  test_backtesting.py  test_benchmarks.py  test_collect_prices_command.py  test_collector.py  test_cost_per_hour.py  test_cost_per_token.py  test_deliver_alerts_command.py  test_depreciation.py  test_fleet_sizing.py  test_geo.py  test_historical.py  test_intelligence_api.py  test_intelligence_store.py  test_margin.py  test_notifications.py  test_providers.py  test_providers_aws.py  test_providers_azure.py  test_providers_computeprices.py  test_providers_hyperstack.py  test_providers_lambdalabs.py  test_providers_sfcompute.py  test_registry.py  test_rent_vs_buy.py  test_reserved_vs_spot.py  test_store.py  test_token_prices.py  test_workloads.py
web/: __init__.py  app.py  collect_prices.py  collector.py  deliver_alerts.py  geo.py  historical.py  intelligence_store.py  notifications.py  power.py  store.py  token_prices.py
(+31 files in other folders)
