[project]
name = "gpu-unit-economics"
version = "0.1.0"
description = "A small, defensible model for GPU compute unit economics: cost per GPU-hour, cost per million tokens, gross margin, depreciation sensitivity, and reserved-vs-spot break-even."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wolfgang Schoenberger" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.7"]

[project.scripts]
gpu-econ = "gpu_econ.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_econ"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
